--- a/Objects/GPIO.build_log.htm
+++ b/Objects/GPIO.build_log.htm
@@ -28,8 +28,9 @@ Project File Date:  12/24/2022
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
 compiling main.c...
+compiling SYSTICK_program.c...
 linking...
-Program Size: Code=2736 RO-data=652 RW-data=8 ZI-data=632  
+Program Size: Code=2808 RO-data=652 RW-data=8 ZI-data=632  
 ".\Objects\GPIO.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -56,10 +57,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:1.0.1
-      Source file:   Device/Source/system_TM4C123.c
       Include file:  Device/Include/TM4C123/TM4C123.h
       Source file:   Device/Source/ARM/startup_TM4C123.s
-Build Time Elapsed:  00:00:01
+      Source file:   Device/Source/system_TM4C123.c
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
